--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "test:coverage": "npm run test -- --coverage",
+    "test": "react-scripts test --verbose --watchAll",
+    "test:coverage": "npm run test -- --coverage --watchAll",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -49,6 +49,7 @@
     "jest-canvas-mock": "^2.2.0",
     "jest-enzyme": "^7.1.2",
     "tslint": "^5.20.1",
-    "tslint-react": "^4.1.0"
+    "tslint-react": "^4.1.0",
+    "waait": "^1.0.5"
   }
 }
